--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,14 +1,14 @@
-OWNER_NAME="FedoRA"
-PREFIX="~"
+OWNER_NAME="꧁⳹𖤍⳼꧂     ᳄࿐𝐋𝐎𝐑𝐃 ×༉  𝕷𝕰 ×༉  𝕱𝕬𝖀𝕮𝕳𝕰𝖀𝕽 ×༉ ᴍᴀʀɴᴇxᴜꜱ ×༉   ꧁⳹𖤍⳼꧂"
+PREFIX="."
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "GOD-NIKA"
+BOT_NAME= "꧁✧⚔𝐍𝐀𝐊𝐀𝐌𝕰𝕾𝕮𝕺-𝐌𝕯⚔✧꧂"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "254717263689"
-OWNER_NAME= "᚛M๏𝓷keℽ D Lบffy᚜"
-DATABASE_URL= ""
-WARN_COUNT= ""
+NUMERO_OWNER= "242067266522"
+OWNER_NAME= "꧁⳹𖤍⳼꧂     ᳄࿐𝐋𝐎𝐑𝐃 ×༉  𝕷𝕰 ×༉  𝕱𝕬𝖀𝕮𝕳𝕰𝖀𝕽 ×༉ ᴍᴀʀɴᴇxᴜꜱ ×༉   ꧁⳹𖤍⳼꧂"
+DATABASE_URL= "https://supabase.com/dashboard/project/edsecwxzjaghjezeddja"
+WARN_COUNT= "3"
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
 ANTI_DELETE_MESSAGE='yes'
